--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="always-on-display">
         
         <p><span id="date"></span></p>
-        <p><span id="time"></span></p>
+        <button class="toggle-fullscreen"><p><span id="time"></span></p></button>
     </div>
 </body>
 <link rel="stylesheet" href="style.css">
