--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     
-    <div class="always-on-display">
+    <div class="always-on-display toggle-fullscreen">
         
         <p><span id="date"></span></p>
-        <button class="toggle-fullscreen"><p><span id="time"></span></p></button>
+        <p><span id="time"></span></p>
     </div>
 </body>
 <link rel="stylesheet" href="style.css">
